# openal-soft-sys

./: Cargo.toml  README.md  build.rs  rustfmt.toml
src/: al.rs  alc.rs  alext.rs  efx.rs  efx_presets.rs  lib.rs
